# cloudsecrets

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  MANIFEST.in  README.md  TODO.md  cloudsecrets.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.html  setup.py  test-secrets-file.json  tox.ini
.github/workflows/: ci.yml
_sources/: cloudsecrets.rst.txt
app/: .gitignore  app.py  config.py  requirements.txt
app/templates/: base.html  crawl.html  form.html  index.html  paused.html  statistics.html  step.html  success.html
cloudsecrets/: __init__.py  aws.py  env.py  file.py  gcp.py
cloudsecrets/cli/: __init__.py
cloudsecrets/tests/unit/: test_env_library.py  test_file_library.py  test_gcp_library.py
docs/: .buildinfo  DESIGN.md  TODO.md  genindex.html  py-modindex.html
docs/source/: cloudsecrets.cli.rst  conf.py  modules.rst
mozsecrets/: __init__.py  gcp.py
tests/unit/: test_aws_library.py  test_env_library.py  test_file_library.py  test_gcp_library.py
