[tool.poetry]
name = "cloudsecrets"
version = "0.0.2"
description = "Python tool for accessing mozilla cloud secrets"
authors = ["Adam Frank <afrank@mozilla.com>"]

[tool.poetry.dependencies]
python = ">=3.4"
google-cloud-secret-manager = "*"
boto3 = "*"
simplejson = "*"

[tool.poetry.dev-dependencies]
moto = "*"

[tool.poetry.scripts]
cloud-secrets = "cloudsecrets.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
